turtleart.star.Star.scala.code
override def run() {
  setPos(70)
}